--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.data.mongodb.host=localhost 
-spring.data.mongodb.port= 27017
-spring.data.mongodb.database= trade
+spring.data.mongodb.host=ds151076.mlab.com
+spring.data.mongodb.port=51076
+spring.data.mongodb.username=4user4
+spring.data.mongodb.password=4user4
+spring.data.mongodb.database=heroku_z44xxbwb
+
